<resources>
    <string name="app_name">WeFridge</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Pantry">Pantry</string>
    <string name="Nearby">Nearby</string>
    <string name="Settings">Settings</string>
    <string name="EditItem">Edit Item</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- EditFragment Hints & Texts -->
    <string name="item_name_hint">Name</string>
    <string name="item_quantity_hint">Quantity</string>

    <string name="item_unit_gram">g</string>
    <string name="item_unit_kilogram">kg</string>
    <string name="item_unit_liter">L</string>
    <string name="item_unit_milliliter">mL</string>
    <string name="item_unit_ounce">oz</string>
    <string name="item_unit_piece">pcs</string>
    <string name="item_best_by_date_hint">Best by</string>
    <string name="item_save_button_text">Save</string>
    <string name="location_switch_label">Share with your neighbors</string>
    <string name="address_text_input_layout_hint">Address</string>
    <string name="item_description_hint">Additional information</string>
    <string name="location_picker_locate_button_text">Locate me</string>
    <string name="unit_dropdown_hint">Unit</string>

    <string name="item_share_contact_email_missing_title">Contact email missing</string>
    <string name="item_share_contact_email_missing_text">In order to share an Item, you have to provide a contact email other users can use to reach out to you. Please state your email address in the settings tab.</string>
    <string name="item_share_location_problem_title">Location problem</string>
    <string name="item_share_location_problem_text">There was an error while we tried to match the location you\'ve entered to real coordinates. Therefore, we disabled the sharing option. Please check your internet connection and try again.</string>
    <string name="item_share_no_internet_connection_title">No internet connection</string>
    <string name="item_share_no_internet_connection_text">There was an error while we tried to match the location coordinates to a real address. Therefore, we disabled the sharing option. Please check your internet connection and try again.</string>
    <string name="item_share_invalid_address_title">Please specify a valid address</string>
    <string name="item_share_invalid_address_text">The address you\'ve entered couldn\'t be matched to a real location. Please specify a valid address or turn off the sharing option.</string>
    <string name="item_share_error_while_saving_title">Error while saving your foodstuff</string>
    <string name="item_share_error_while_saving_text">Please check your internet connection and try again.</string>
    <string name="item_share_unable_to_determine_location_title">Unable to determine location</string>
    <string name="item_share_unable_to_determine_location_text">Please try it another time.</string>
    <string name="item_share_location_permission_denied_title">Permission denied</string>
    <string name="item_share_location_permission_denied_text">We have no permission to access your location.\n If you want to make use of the "locate me" functionality, please enable location access in settings.</string>
    <string name="item_share_open_settings">Open settings</string>

    <string name="best_by_overdue">Expired on %1$s</string>
    <string name="best_by_plural">Best by in %1$s days</string>
    <string name="best_by_singular">Best by in 1 day</string>
    <string name="best_by_today">Best by today</string>

    <string name="auth_success_welcome_back">Welcome back, %1$s!</string>
    <string name="auth_success_welcome">Welcome %1$s!</string>
    <string name="error_participants_email_own">Please invite someone else.</string>
    <string name="error_participants_email_wrong">Please enter a valid email.</string>
    <string name="participants_add_title">Add a participant</string>
    <string name="participants_add_cancel">Cancel</string>
    <string name="participants_add_invite">Invite</string>
    <string name="participants_add_email_hint">Participants email</string>
    <string name="settings_contact_name_saved">Name saved!</string>
    <string name="settings_contact_email_saved">Email saved!</string>
    <string name="error_settings_contact_name_empty">Name cannot be empty!</string>
    <string name="error_settings_contact_name_wrong">Please enter a valid email.</string>
    <string name="participants_remove_title">Are you sure?</string>
    <string name="participants_remove_message">Please confirm, that you want to remove %1$s from your pantry.</string>
    <string name="participants_remove_cancel">Cancel</string>
    <string name="participants_remove_confirm">Confirm</string>
    <string name="participants_add_button">Invite Participants</string>
    <string name="participants_add_not_found">User not found!</string>
    <string name="participants_add_already_member">User is already member of a pantry!</string>
    <string name="participants_add_success">User successfully added!</string>
    <string name="participants_add_failure">Failure while adding user!</string>
    <string name="participants_manager">Your pantry is managed by %1$s</string>
    <string name="settings_contact_name">Contact Name</string>
    <string name="settings_contact_name_hint">This is shown near your shared items</string>
    <string name="settings_contact_email">Contact Email</string>
    <string name="settings_contact_email_hint">This is used, if someone wants to contact you about your shared items</string>
    <string name="avatar_description">Avatar</string>
    <string name="logout">Logout</string>
    <string name="nav_label_nearby">Nearby Shared Items</string>
    <string name="add_new_item">Add new item</string>
    <string name="nearby_detail_quantity">Quantity</string>
    <string name="nearby_detail_best_by">Best by</string>
    <string name="nearby_detail_distance">Distance</string>
    <string name="nearby_detail_additional_information">Additional information</string>
    <string name="nearby_detail_owner">Owner</string>
    <string name="nearby_detail_contact">Contact</string>
    <string name="item_quantity_unit">%1$d %2$s</string>

    <!-- Alert dialogs -->
    <string name="ad_title_contact_email_missing">Contact email missing</string>
    <string name="ad_title_contact_email_missing_on_destroy">Item not shared</string>
    <string name="ad_title_error_parsing_address_string">Location Problem</string>
    <string name="ad_title_no_network">No internet connection</string>
    <string name="ad_title_invalid_address">Invalid address</string>
    <string name="ad_title_save_item_failed">Item not saved</string>
    <string name="ad_title_location_determination_failed">Unable to determine location</string>
    <string name="ad_title_location_permission_rationale">Why do we need your location?</string>
    <string name="ad_title_account_not_verified">Account not verified</string>
    <string name="ad_title_location_permission_denied">Permission denied</string>

    <string name="ad_msg_contact_email_missing">In order to share an Item, you have to provide a contact email other users can use to reach out to you. Please state your email address in the settings tab or disable the sharing option.</string>
    <string name="ad_msg_contact_email_missing_on_destroy">In order to share an Item, you have to provide a contact email other users can use to reach out to you. Please state your email address in the settings tab.</string>
    <string name="ad_msg_error_parsing_address_string">There was an error while we tried to match the location you\'ve entered to real coordinates. Please correct the address you\'ve entered or disable the sharing option. You may also want to check your internet connection and try again.</string>
    <string name="ad_msg_error_parsing_address_string_on_destroy">There was an error while we tried to match the location you\'ve entered to real coordinates. Therefore, we disabled the sharing option. Please correct the address you\'ve entered in order to share the foodstuff. You may also want to check your internet connection and try again.</string>
    <string name="ad_msg_no_network">There was an error while we tried to match the location coordinates to a real address. Therefore, we disabled the sharing option. Please check your internet connection and try again.</string>
    <string name="ad_msg_invalid_address">The address you\'ve entered couldn\'t be matched to a real location. Please specify a valid address or turn off the sharing option.</string>
    <string name="ad_msg_save_item_failed">Please check your internet connection and try again.</string>
    <string name="ad_msg_location_determination_failed">Please check your internet connection or try again another time.</string>
    <string name="ad_msg_location_permission_rationale">Your location is needed as soon as you start sharing this foodstuff. If you want to determine your location conveniently with just a tap, give us the required permission to do so. Other users will not see your exact location.</string>
    <string name="ad_msg_account_not_verified">It seems like you are logged out. Please log in under "Settings" > "Login". Then try again.</string>
    <string name="ad_msg_location_permission_denied">In order to use the \"locate me\" functionality you have to grant us access to your precise location. Open settings to do so.</string>

    <string name="ad_btn_retry">Retry</string>
    <string name="ad_btn_open_settings">Open settings</string>

    <string name="toast_text_on_new_item_saved">Item saved</string>
    <string name="toast_text_on_item_deleted">Item deleted</string>

    <!-- Other -->
    <string name="accessibility_hint_unit_auto_complete_view">Element for picking the item\'s unit</string>
</resources>