<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.NearbyDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nearby_detail_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/owner" />


        <TextView
            android:id="@+id/quantity_header"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="@dimen/nearby_detail_overline_top"
            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:text="@string/nearby_detail_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantity"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity_header" />


        <TextView
            android:id="@+id/best_by_header"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="@dimen/nearby_detail_overline_top"
            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:text="@string/nearby_detail_best_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity" />

        <TextView
            android:id="@+id/best_by"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/best_by_header" />


        <TextView
            android:id="@+id/distance_header"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="@dimen/nearby_detail_overline_top"
            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:text="@string/nearby_detail_distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/best_by" />

        <TextView
            android:id="@+id/distance"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distance_header" />


        <TextView
            android:id="@+id/additional_information_header"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="@dimen/nearby_detail_overline_top"
            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:text="@string/nearby_detail_additional_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distance" />

        <TextView
            android:id="@+id/additional_information"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="@dimen/nearby_detail_side"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/additional_information_header" />

        <TextView
            android:id="@+id/owner_header"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="@dimen/nearby_detail_overline_top"
            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:text="@string/nearby_detail_owner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/additional_information" />

        <TextView
            android:id="@+id/owner"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nearby_detail_side"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="@dimen/nearby_detail_side"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/owner_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>